# py_load_pubmedabstracts

./: .coverage  .gitignore  DATASOURCE.md  Dockerfile  Frunction Requirements Document.md  README.md  pyproject.toml
.github/workflows/: ci.yml
py_load_pubmedabstracts/: .gitignore  README.md  pyproject.toml
py_load_pubmedabstracts/src/py_load_pubmedabstracts/: cli.py  config.py
py_load_pubmedabstracts/src/py_load_pubmedabstracts/db/: base_adapter.py  postgres_adapter.py
py_load_pubmedabstracts/tests/: test_cli.py
py_load_pubmedabstracts/tests/integration/: test_postgres_adapter.py
src/py_load_pubmedabstracts/: __init__.py  cli.py  config.py  ftp_client.py  logging_config.py  models.py  parser.py
src/py_load_pubmedabstracts/db/: __init__.py  base.py  factory.py  postgresql.py
tests/: conftest.py  test_cli.py  test_cli_unit.py  test_delta_load.py  test_factory.py  test_ftp_client.py  test_logging_config.py  test_normalized_load.py  test_parser.py  test_parser_edge_cases.py  test_parser_integration.py  test_postgresql.py  test_postgresql_integration.py
