[project]
name = "py-load-pubmedabstracts"
version = "0.1.0"
description = ""
authors = [
    {name = "google-labs-jules[bot]",email = "161369871+google-labs-jules[bot]@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "typer[all] (>=0.17.4,<0.18.0)",
]

[tool.poetry]
packages = [{include = "py_load_pubmedabstracts", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
ruff = "^0.12.12"
mypy = "^1.17.1"
testcontainers = {extras = ["postgres"], version = "^4.12.0"}

[tool.poetry.scripts]
py-load-pubmedabstracts = "py_load_pubmedabstracts.cli:app"

[tool.pytest.ini_options]
pythonpath = "src"
markers = [
    "integration: marks tests as integration tests (slow, requires docker)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
